--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page</title>
+    <link rel="stylesheet" href="styles/adminStyle.css">
 <body>
+    <div class="dialogue"></div>
     <h1>Admin Page</h1>
     <table border="1">
         <thead>
@@ -26,7 +28,7 @@
                     <td><%= data[i].firstName %></td>
                     <td><%= data[i].email %></td>
                     <td><%= data[i].department %></td>
-                    <td><%= data[i].message %></td>
+                    <td id="message"><%= data[i].message %></td>
                     <td>
                         <% if (data[i].attachment) { %>
                             <a href="../uploads/<%= data[i].attachment %>">Download Attachment</a>
@@ -34,14 +36,11 @@
                             No Attachment
                         <% } %>
                     </td>
-                    <td><%= 
-                        new Date(data[i].dateOfAdded).toLocaleString()
-                        
-                        %></td>
-                    
-                </tr>
+                    <td><%= new Date(data[i].dateOfAdded).toLocaleString().slice(0, 10) %></td>></tr>
             <% } %>
         </tbody>
     </table>
+
+    <script src="styles/admin.js"></script>
 </body>
 </html>
